fix(plugin): align with Obsidian guidelines

--- a/packages/plugin/styles.css
+++ b/packages/plugin/styles.css
@@ -44,7 +44,7 @@
   padding-top: 1rem;
 }
 
-.mod-warning {
+.sync-workers-warning {
   color: var(--text-warning);
   font-weight: 500;
 }
